--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  Hello World
+  <header>
+    empty header
+  </header>
+  <div class="content">
+    <aside>
+      *left aside*
+    </aside>
+    <main>
+      main content
+    </main>
+    <aside>
+      *right aside*
+    </aside>
+  </div>
+  <footer>
+    empty footer
+  </footer>
   <script src="src/app.js"></script>
 </body>
 </html>
