Write basic page content

--- a/index.html
+++ b/index.html
@@ -3,29 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Title</title>
+  <title>Ruixing's arctiles</title>
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
+  <script src="src/app.js"></script>
   <header>
-    empty header
+    <nav>
+      <ul class="nav-list">
+        <li>Home</li>
+        <li>World</li>
+        <li>Technology</li>
+        <li>Design</li>
+        <li>Culture</li>
+        <li>Business</li>
+        <li>Politics</li>
+        <li>Opinion</li>
+        <li>Science</li>
+        <li>Health</li>
+      </ul>
+    </nav>
   </header>
   <div class="content">
     <aside>
-      *left aside*
+      *About and Archives*
     </aside>
     <main>
-      main content
+      *Some arctiles*
     </main>
     <aside>
-      *right aside*
+      *login window*
     </aside>
   </div>
   <footer>
-    empty footer
+    Advanced CSS homework
   </footer>
-  <script src="src/app.js"></script>
 </body>
 </html>
