--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <script src="src/app.js"></script>
-  <header>
+  <header class="header">
     <nav>
       <ul class="nav-list">
         <li>Home</li>
