Adjust content structure.

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     </nav>
   </header>
   <div class="content">
-    <aside>
+    <aside class="aside">
       *About and Archives*
     </aside>
     <main>
       *Some arctiles*
     </main>
-    <aside>
+    <aside class="aside">
       *login window*
     </aside>
   </div>
