Complete left aside.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,27 @@
   </header>
   <div class="content">
     <aside class="aside">
-      *About and Archives*
+      <div class="aside-card about-content">
+        <h2 class="aside-title">About</h2>
+        <p>
+          Some about content showed here: Wikipedia is an online free-content encyclopedia project helping to create a world in which everyone can freely share in the sum of all knowledge. It is supported by the Wikimedia Foundation and based on a model of openly editable content. The name "Wikipedia" is a blending of the words wiki (a technology for creating collaborative websites, from the Hawaiian word wiki, meaning "quick") and encyclopedia. Wikipedia's articles provide links designed to guide the user to related pages with additional information.
+        </p>
+      </div>
+      <div class="aside-card">
+        <h2 class="aside-title">Archives</h2>
+        <ul>
+          <li>
+            <a href="">
+              October 2020
+          </a>
+          </li>
+          <li>
+            <a href="">
+              November 2019
+            </a>
+          </li>
+        </ul>
+      </div>
     </aside>
     <main>
       *Some arctiles*
