Adjust basic content style.

--- a/index.html
+++ b/index.html
@@ -50,8 +50,36 @@
         </ul>
       </div>
     </aside>
-    <main>
-      *Some arctiles*
+    <main class="main">
+      <article class="main-article">
+        <img class="article-photo" src="https://http.cat/100" alt="arcticle photo">
+        <div class="article-caption">
+          <h2>Article 1</h2>
+          <p>Some short brief of this article.</p>
+          <a href="#home">View details >></a>
+        </div>
+      </article>
+      <article class="main-article">
+        <img class="article-photo" src="https://http.cat/100" alt="arcticle photo">
+        <div class="article-caption">
+          <h2>Article 1</h2>
+          <p>
+            Some long brief of this article. 
+            The Hypertext Transfer Protocol (HTTP) is an application layer protocol for distributed, collaborative, hypermedia information systems.[1] HTTP is the foundation of data communication for the World Wide Web, where hypertext documents include hyperlinks to other resources that the user can easily access, for example by a mouse click or by tapping the screen in a web browser.
+          </p>
+          <a href="#home">View details >></a>
+        </div>
+      </article>
+      <article class="main-article">
+        <img class="article-photo" src="https://http.cat/100" alt="arcticle photo">
+        <div class="article-caption">
+          <h2>Article 1</h2>
+          <p>
+            Some short brief of this article.
+          </p>
+          <a href="#home">View details >></a>
+        </div>
+      </article>
     </main>
     <aside class="aside">
       *login window*
