Adjust footer style.

--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
       </section>
     </aside>
   </div>
-  <footer>
-    Advanced CSS homework
+  <footer class="footer">
+    <p>
+      Advanced CSS homework
+    </p>
   </footer>
 </body>
 </html>
